# pasm

./: .gitignore  CMakeLists.txt  Makefile  README.md  instructions.c  instructions.h  interpreter_states.h  pasm.c  pasm.sln
docs/: documentation.md
examples/: README.md  array.pasm  keylogger.pasm  poly.pasm  ptr.pasm  test.pasm  xored_hello.pasm
include/: pasm.h
msvc/: interpreter.vcxproj  interpreter.vcxproj.filters  pasm.sln  pasm.vcxproj  pasm.vcxproj.filters  socket_usage.vcxproj  socket_usage.vcxproj.filters
src/: CMakeLists.txt  api.c  api.h  debug.c  debug.h  file_utils.c  file_utils.h  get_instruction.c  get_instruction.h  instruction_set.h  instructions.c  instructions.h  interpreter_states.c  interpreter_states.h  main.c  main.h  parser.c  parser.h  pasm.c  pasm.vcxproj  pasm.vcxproj.filters
tests/: Makefile  fmemopen.c  fmemopen.h  interpreter.c  lib_use.c  socket_win32.c
